--- a/style.css
+++ b/style.css
@@ -1,8 +1,217 @@
-@media (min-width: 768px) 
-{ 
+/*Mobile phones css*/
+
+body {
+  margin: 0%;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+}
+
+.top-nav .nav-item .nav-link {
+  color: #fff;
+}
+
+.program .program-title {
+  align-items: center;
+  justify-content: center;
+}
+
+.program-title .col #line {
+  width: 10vw;
+  color: #ec5242;
+  border: 2px solid #ec5242;
+  opacity: 1;
+  margin: auto;
+}
+
+.top-nav {
+  padding-top: 0;
+  padding-bottom: 0;
+  line-height: 10px;
+}
+
+#navbarNav {
+  padding-right: 3%;
+  width: 60px;
+}
+
+#logo {
+  position: absolute;
+  margin-left: 12%;
+  position: inherit;
+  zoom: 65%;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
+}
+
+.patners {
+  color: white;
+  font-size: 25px;
+}
+
+.footer-logo {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 10%;
+  justify-content: space-around;
+  background-color: #e5e5e5;
+}
+
+.footer-logo img {
+  zoom: normal;
+}
+
+.card {
+  background-color: rgb(58, 61, 68, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  color: #fff;
+}
+
+.cards {
+  margin: 0;
+  gap: 3rem;
+}
+
+.lead {
+  color: #fff;
+  text-align: center;
+  font-weight: bolder;
+  font-size: 25px;
+}
+
+.card .card-body .card-title {
+  color: #ec5242;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 4em;
+}
+
+.card-body p {
+  display: flex;
+  justify-content: stretch;
+}
+
+.card-img-top {
+  width: 4em;
+}
+
+.cards {
+  justify-content: center;
+}
+
+.btm-nav {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.logo1 {
+  display: flex;
+  justify-content: center;
+  width: auto;
+}
+
+.logo1 .col img {
+  width: 120%;
+  height: 120%;
+  object-fit: cover;
+  align-self: center;
+}
+
+#landing-p {
+  background-image: url(./images/about-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.program {
+  background-image: url(./images/progBac.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-toggle1 {
+  color: #fff;
+}
+
+.program .program-title h3 {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 900;
+  font-family: "Lato", sans-serif;
+}
+
+.program .program-title .mt-3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#landing-p h2 {
+  width: auto;
+  font-size: 4vw;
+  color: #ec5242;
+  font-weight: bolder;
+  font-weight: 900;
+  text-transform: uppercase;
+  background-color: #ec5242;
+  background-image: url(./images/board.png);
+  background-repeat: repeat;
+  background-clip: border-box;
+  background-size: auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#landing-p h1 {
+  color: #ec5242;
+}
+
+#landing-p h3 {
+  color: black;
+  font-size: 25px;
+  font-weight: 900;
+  font-family: "Lato", sans-serif;
+}
+
+#intro {
+  font: 1em sans-serif;
+  background-color: #f7f7f7;
+  border: 4px solid #dedede;
+  padding: 10px 10px 10px 10px;
+}
+
+#landing-p h3 {
+  color: black;
+  font-size: 25px;
+  font-weight: 900;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#venue {
+  color: #1f1d1d;
+}
+
+/*desktop css*/
+
+@media (min-width: 768px) {
   body {
     margin: 0%;
-    font-family: 'Lato',sans-serif;
+    font-family: "Lato", sans-serif;
     font-weight: 300;
   }
 
@@ -41,55 +250,56 @@
     zoom: 65%;
   }
 
-  
-footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #272a31;
-}
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #272a31;
+  }
 
-.patners {
-  color: white;
-  font-size: 25px;
-}
+  .patners {
+    color: white;
+    font-size: 25px;
+  }
 
-.logo1 {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-}
+  .logo1 {
+    display: flex;
+    justify-content: space-evenly;
+    width: auto;
+  }
 
-.logo1 img {
-  width: 8%;
-  height: 4%;
-}
+  .logo1 .col img {
+    width: 10vw;
+    height: 20vh;
+    align-self: center;
+  }
 
-.footer-logo {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: space-around;
-  background-color: #e5e5e5;
-}
+  .footer-logo {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 10%;
+    justify-content: space-around;
+    background-color: #e5e5e5;
+  }
 
-.footer-logo img {
-  width: 150px;
-}
-
+  .footer-logo img {
+    zoom: normal;
+  }
 
   .card {
     background-color: rgb(58, 61, 68, 0.9);
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     color: #fff;
   }
 
   .cards {
     margin: 0;
-    gap: 2rem;
+    gap: 0.2rem;
   }
 
   .lead {
@@ -108,7 +318,8 @@ footer {
     flex-direction: column;
     align-self: center;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 4em;
   }
 
   .card-body p {
@@ -131,11 +342,14 @@ footer {
 
   #landing-p {
     background-image: url(./images/about-bg.png);
-    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .program {
     background-image: url(./images/progBac.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .bg-toggle1 {
@@ -146,7 +360,7 @@ footer {
     color: #fff;
     font-size: 25px;
     font-weight: 900;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
   }
 
   .program .program-title .mt-3 {
@@ -156,8 +370,8 @@ footer {
   }
 
   #landing-p h2 {
-    width: 100%;
-    font-size: 50px;
+    width: auto;
+    font-size: 3vw;
     color: #ec5242;
     font-weight: bolder;
     font-weight: 900;
@@ -179,7 +393,7 @@ footer {
     color: black;
     font-size: 25px;
     font-weight: 900;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
   }
 
   #intro {
@@ -200,79 +414,3 @@ footer {
     color: #1f1d1d;
   }
 }
-
-/*Mobile phones css*/
-
-@media (max-width: 768px) 
-{ 
-  body {
-    margin: 0%;
-    font-family: 'Lato',sans-serif;
-    font-weight: 300;
-  }
-
-  .top-nav {
-    display: none;
-  }
-
-  #navbarNav {
-    padding: 3%;
-    width: auto;
-  }
-
-  #logo {
-    display: none;
-  }
-
-  #mobile-view {
-    justify-content: flex-start;
-  }
-
-  #landing-p {
-    background-image: url(./images/about1-bg.png);
-    height: 100vh;
-  }
-
-  .bg-toggle1 {
-    color: #fff;
-  }
-
-  #landing-p h2 {
-    width: 100%;
-    font-size: 30px;
-    color: #ec5242;
-    font-weight: bolder;
-    font-weight: 900;
-    text-transform: uppercase;
-    background-color: #ec5242;
-    background-image: url(./images/board.png);
-    background-repeat: repeat;
-    background-clip: border-box;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-
-  #landing-p h1 {
-    color: #ec5242;
-  }
-
-  #landing-p h3 {
-    color: black;
-    font-size: 20px;
-    font-weight: 500;
-    font-family: 'Lato', sans-serif;
-  }
-
-  #intro {
-    font: 1em sans-serif;
-    background-color: #f7f7f7;
-    border: 4px solid #dedede;
-    padding: 10px 10px 10px 10px;
-  }
-
-  #venue {
-    color: #1f1d1d;
-  }
-}
-
-
