--- a/about.css
+++ b/about.css
@@ -32,7 +32,7 @@
 
   #landing-p h2 {
     width: auto;
-    font-size: 3vw;
+    font-size: 6vw;
     color: #ec5242;
     font-weight: bolder;
     font-weight: 900;
@@ -74,6 +74,7 @@
   align-items: center;
   margin-top: 2em;
   cursor: pointer;
+  margin-left: 30px;
 }
 
   .mobileMenu {
@@ -81,12 +82,11 @@
   height: 105vh;
   top: -1px;
   position: fixed;
-  z-index: 3;
+  z-index: 1000;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   align-items: center;
-  transition:ease;
   background: #6070ffe6;
   backdrop-filter: blur(4px);
   width: 100%;
@@ -105,6 +105,16 @@
   .mobileMenu ul li a {
     color: #fff;
     border: none;
+    font-size: large;
+    font-weight: bold;
+    text-align: left;
+  }
+
+  .mobileMenu ul li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .mobileMenu ul {
@@ -237,10 +247,6 @@
   justify-content: flex-start;
   align-self: flex-start;
 }
-
-  .mobileMenu {
-    visibility: hidden;
-  }
 
   .top-nav .nav-item .nav-link {
     color: #fff;
